--- a/deploy/eshop-ui/base/config.json.j2
+++ b/deploy/eshop-ui/base/config.json.j2
@@ -1,8 +1,8 @@
 {
-  "watchUrl": "http://catalog-watches-eshop.{{ ocp_ingress_domain[0] }}",
-  "watchPath": "/watches",
-  "paymentUrl": "http://payment-watches-eshop.{{ ocp_ingress_domain[0] }}",
-  "paymentPath": "/payments",
-  "orderUrl": "http://order-watches-eshop.{{ ocp_ingress_domain[0] }}",
-  "orderPath": "/orders"
+  "watchUrl": "http://gateway-watches-eshop.apps.ocp4cluster.ocp4.cfernand.com",
+  "watchPath": "/gw-catalog/watches",
+  "paymentUrl": "http://gateway-watches-eshop.apps.ocp4cluster.ocp4.cfernand.com",
+  "paymentPath": "/gw-payment/payments",
+  "orderUrl": "http://gateway-watches-eshop.apps.ocp4cluster.ocp4.cfernand.com",
+  "orderPath": "/gw-order/orders"
 }
